# Ligi-fotbal-aplicatie

./: README.md  Transfermarkt_etapa1.cpp
Transfermarkt/: Antrenor.cpp  Antrenor.h  CMakeLists.txt  Club.cpp  Club.h  IPersoana.cpp  IPersoana.h  Ikit.cpp  Ikit.h  Jucator.cpp  Jucator.h  Kit.cpp  Kit.h  Liga.cpp  Liga.h  Persoana.cpp  Persoana.h  Stats_Jucator.cpp  Stats_Jucator.h  Transfer.cpp  Transfer.h  TransferException.cpp  TransferException.h  TransfermarktException.cpp  TransfermarktException.h  main.cpp
